Fix: Remove Windows-specific shell and update GITHUB_OUTPUT format

--- a/action.yml
+++ b/action.yml
@@ -24,11 +24,9 @@ runs:
         go-version: '1.21'
     - name: Build action
       run: go build -o vc-badge-action main.go
-      shell: cmd
       working-directory: ${{ github.action_path }}
     - name: Run action
-      run: ./vc-badge-action
-      shell: cmd
+      run: ${{ github.action_path }}/vc-badge-action
       env:
         INPUT_ISSUER_DID: ${{ inputs.issuer_did }}
         INPUT_ISSUER_PRIVATE_KEY: ${{ inputs.issuer_private_key }}
